# MixPlayer

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  main.cpp  mainwindow.cpp  mainwindow.h
output/x64Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
output/x64Debug/.cmake/api/v1/reply/: codemodel-v2-31c37ba5b697055b195e.json  directory-.-Debug-2ee4a9ce57e3f1d6dc28.json  index-2023-12-10T04-41-53-0334.json  target-multiplayer-Debug-a2c5b546037ddce10203.json  target-multiplayer_autogen-Debug-77e28b64670a5502c684.json  target-multiplayer_autogen_timestamp_deps-Debug-7f2f9e4f0acaeea76ef6.json
output/x64Debug/.cmake/api/v1/reply.prev/: cache-v2-e43eb566a70a3411ed6c.json  cmakeFiles-v1-5c351e3db3c80ec65beb.json  codemodel-v2-c20af77068de6cc9de6c.json  directory-.-Debug-fb27c9be9658e7a4217d.json  index-2023-12-10T04-41-39-0826.json  target-multiplayer-Debug-5f6f634a9ef59ae32737.json
output/x64Debug/.qt/: QtDeploySupport.cmake
output/x64Debug/.qtc_clangd/: compile_commands.json
output/x64Debug/.qtc_clangd/.cache/clangd/index/: QApplication.B0EC4CBEB137CBAA.idx  QDebug.B517B4E16CC2A519.idx  QLocale.3BA2B22B53DC4201.idx  QMainWindow.3FB30BAF0C719F67.idx  QMenuBar.F219740DB38DE22E.idx  QStatusBar.649F11DACE0C7AD8.idx  QTranslator.136745447975B33F.idx  QVariant.727A365C748B98A4.idx  QWidget.E61A39729DDC9DE7.idx  affine.hpp.10EDBDDC0F630E75.idx  all_indices.h.3E32E62E7AE1721D.idx  allocator.h.BB9B62FD264481CA.idx  any.h.A79885F1DA7D953E.idx  aruco_board.hpp.08E2AF1FD566DF91.idx  aruco_detector.hpp.C98B484B900BDA07.idx  aruco_dictionary.hpp.A9C67D9C1F89C238.idx  async.hpp.0239975B022DF5B9.idx  attributes.h.D7C5EBB47B74F27B.idx  autotuned_index.h.8ECD4D77A1CE0ABD.idx  avconfig.h.3F5B1B0E5AD6A326.idx  avformat.h.EC9924677B5DAC0C.idx  avio.h.D613CD1B02031845.idx  avutil.h.7609824F68D0388E.idx  background_segm.hpp.F2FC7A11C3E61126.idx  barcode.hpp.58703B7A75C704D1.idx  base.hpp.508EC734428A5A5C.idx  blenders.hpp.2C76B2D60E4A4164.idx  buffer.h.4D69ACD1E7494B3A.idx  bufferpool.hpp.BF16BBE7042AD7F1.idx  c++config.h.FC2CE9E84E511AD6.idx  calib3d.hpp.38138FA5823F25D2.idx  camera.hpp.B52548D5A798FD84.idx  cfloat.2E2306DE312CECAE.idx  channel_layout.h.E57CE723C00EFE6F.idx  charuco_detector.hpp.5A41F67A3E152438.idx  check.hpp.9777FA64A97C1020.idx  codec.h.762DFAEEA6E21858.idx  codec_id.h.C7083D3F08136796.idx  codec_par.h.D44071C3DBC200DF.idx  codecvt.h.2933B3B7F173D72B.idx  (+302 more)
output/x64Debug/multiplayer_autogen/: deps
output/x64Debug/multiplayer_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d
